# gpu-comp

./: .gitignore  README.md  create_matfiles.py  cutlass_benchmark.csv  data-generation-0509.ipynb  mock-data-adapted.ipynb  mock-data-new.ipynb  mock-data-old-adapted.ipynb  mock-data-old.ipynb  own_matmul_baseline.ipynb  plotting.ipynb  test-ent-models.ipynb  testACsComp.ipynb
cuBLAS_baseline/: CMakeLists.txt  baseline_matVec_cuBLAS.cu
cuBLAS_baseline_float/: CMakeLists.txt  baseline_matVec_cuBLAS.cu
cuBLAS_baseline_int/: CMakeLists.txt  baseline_matVec_cuBLAS.cu  cuBLASlt_EXAMPLE.txt
custom_baseline_int/: CMakeLists.txt  baseline_matVec_custom.cu  thread_search
matvans/: CMakeLists.txt  matvans.cu
matvansWarpPerRow/: CMakeLists.txt  data-generation-1510_warpPerRow.ipynb  matvansWarpPerRow-kernel.cu  matvansWarpPerRow.cu
oldstuff/: mock-data-new.ipynb
readMat/: CMakeLists.txt  read-mat.cu
